# naive-wiki-api

./: .dockerignore  .env  .env.local  .gitignore  Cargo.toml  Dockerfile.migrate  README.md  docker-compose.yml
migrations/2018-10-14-192404_create_documents/: up.sql
migrations/2018-10-14-192528_create_revisions/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
src/api/: mod.rs  server.rs  utils.rs
tests/: integration_test.rs  mod.rs
