[package]
name = "naive_wiki"
version = "0.1.0"
authors = ["Tom Milligan <tommilligan@users.noreply.github.com>"]

[dependencies]
bodyparser = "0.8.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
iron = "0.6.0"
log = "0.4.5"
logger = "0.4.0"
params = "0.8.0"
persistent = "0.4.0"
pretty_env_logger = "0.2.4"
router = "0.6.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"

[dev-dependencies]
reqwest = "0.9.2"